--- a/gallery/src/app/components/gallery/gallery.component.html
+++ b/gallery/src/app/components/gallery/gallery.component.html
@@ -1,13 +1,13 @@
 <div class="wrapper">
-    <div class="background"></div>
+    <div id="background" ></div>
     <h2>Fotogaléria</h2>
     <h4>Kategórie</h4>
     <hr>
     <div class="gallery clearfix container row">
 
-        <div class="card" *ngFor="let item of categories;let i = index;" [routerLink]="['/category/'+item.id]">
+        <div class="card" *ngFor="let item of categories;let i = index;" [routerLink]="['/category/'+item.id]" >
             <img class="card-img-top"
-                 src="../../../assets/images/arch.jpeg"
+                 src="{{thumbnails[i]? thumbnails[i] : 'http://21642-presscdn.pagely.netdna-cdn.com/wp-content/themes/nucleare-pro/images/no-image-box.png'}}"
                  alt="Card image cap">
             <div class="card-body">
                 <p style="text-transform: uppercase" class="card-text">{{item.name}}</p>
