--- a/gallery/src/app/components/images/images.component.html
+++ b/gallery/src/app/components/images/images.component.html
@@ -1,9 +1,11 @@
 <div class="gallery clearfix container row">
     <div class="card" style="width: 20rem;"
-         *ngFor="let item of categoryImages[selectedCategory];let i = index;" routerLink="">
+         *ngFor="let item of imagesCollection;let i = index;" routerLink="">
         <img class="card-img-top" src="{{item}}" alt="Card image cap">
         <div class="card-body">
             body
         </div>
     </div>
+
+    <button (click)="addImage()">Add image</button>
 </div>
