--- a/gallery/src/app/components/images/images.component.html
+++ b/gallery/src/app/components/images/images.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div id="background" ></div>
+    <div id="background" style="background-image: url({{categoryImages[0][0]}});"></div>
     <h2>Fotogaléria</h2>
     <h4>Kategórie</h4>
     <hr>
@@ -13,4 +13,5 @@
     </div>
 
     <button (click)="addImage()">Add image</button>
+</div>
 </div>
