--- a/gallery/src/assets/main.css
+++ b/gallery/src/assets/main.css
@@ -1,28 +1,149 @@
 h2,h3,h4{
-    color: black;
+    color: white;
 }
 .wrapper {
     box-sizing: border-box;
-    max-width: 800px;
+    max-width: 80%;
     margin: 0 auto;
     margin-top: 15vh;
 }
 
-.gallery.clearfix.container.row {
+.gallery{
     justify-content: center;
+    margin: 0 auto;
 }
 .card {
 
-    width: 190px;
+    width: 263px;
     margin: 15px;
 }
 
+
 #background {
-    height: 40vh;
+    height: 51.8vh;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     background-size: cover;
     z-index: -2;
+    overflow: hidden;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+
 }
+
+img.card-img-top {
+
+    height: 156px;
+}
+
+.card-block {
+    min-height: 56px;
+    position: relative
+}
+
+h4.card-title {
+    line-height: 56px;
+    text-align: center;
+    color: #555555;
+    font-size:16px;
+    text-transform: uppercase;
+    position: relative;
+}
+
+/*.card-block:before {*/
+    /*content: ' ';*/
+    /*position: absolute;*/
+    /*width: 100%;*/
+    /*height: 30px;*/
+    /*z-index: 2;*/
+    /*top: -25px;*/
+    /*left: 0px;*/
+    /*background: white;*/
+/*}*/
+
+#background img {
+    height: 100%;
+    width: 100%;
+    filter: blur(4px);
+    transform: scale(1.2);
+}
+
+hr {
+    margin-top: 1rem;
+    border: 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.59);
+    margin-bottom: 35px;
+}
+
+h4.card-title.imagesCount {
+    position: absolute;
+    left: 0px;
+    top: 38px;
+    font-size: 12px;
+    line-height: 16px;
+    width: 100%;
+    background: white;
+    transition: display 0s, opacity 0.5s linear;
+}
+
+h4.card-title.title {
+    font-weight: bold;
+}
+
+
+
+.card-block.add {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    min-height: 225px;
+}
+
+i.material-icons.addgallery {
+    font-size: 50px;
+    color: #e1e1e1;
+}
+
+
+img.closeIcon {
+    position: absolute;
+    /* font-size: 16px; */
+    width: 16px;
+    right: 10px;
+    top: 10px;
+}
+
+.card-body {
+    position: relative;
+}
+
+.alert {
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    z-index: 9999999999999999;
+    box-shadow: 2px 2px 8px 0px #0000004d;
+    line-height: 12px;
+}
+
+
+span.imagesCount {
+    position: absolute;
+    top: -40px;
+    font-weight: bolder;
+    color: #0000007a;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    background: white;
+    width: 100%;
+    padding: 10px;
+}
+
+
+
+
