--- a/gallery/src/app/components/images/images.component.html
+++ b/gallery/src/app/components/images/images.component.html
@@ -1,5 +1,9 @@
+<div (click)="hideOverlay()" id="overlay"></div>
 <div class="wrapper">
-    <!--<div id="background" [ngStyle]="{'background-image': url('') } url('http://api.programator.sk/images/0x156/{{imagesCollection[0].fullpath}}');"></div>-->
+    <div id="background">
+        <img src="{{background}}" alt="">
+
+    </div>
     <h2>Fotogaléria</h2>
     <h4>Kategórie</h4>
     <hr>
@@ -9,35 +13,24 @@
         <div class="card" style=""
              *ngFor="let item of imagesCollection;">
             <img class="card-img-top" src="http://api.programator.sk/images/0x156/{{item.fullpath}}"
-                 alt="Card image cap">
+                 alt="Card image cap" (click)="showLightBox(item.fullpath)">
             <div class="card-body">
                 {{item.name}}
                 <img class="closeIcon" src="../../../assets/images/close.png"
                      alt="" (click)="removeImage(item.fullpath);">
-
             </div>
         </div>
 
         <div class="card">
             <div class="card-block add">
-                <i class="material-icons addgallery" (click)="addImage()">add_to_photos</i>
-                Pridať obrázok
-            </div>
+                <div dnd-droppable class="panel panel-info drag-and-drop"
+                     (onDropSuccess)="transferDataSuccess($event)">
+                    <div class="panel-heading">Place to drop</div>
+                    <div class="panel-body">
+                    </div>
 
-        </div>
-
-
-
-    </div>
-
-    <h4>Simple Drag-and-Drop</h4>
-    <div class="row">
-
-        <div class="col-sm-3">
-            <div dnd-droppable class="panel panel-info"
-                 (onDropSuccess)="transferDataSuccess($event)">
-                <div class="panel-heading">Place to drop</div>
-                <div class="panel-body">
+                    <i class="material-icons addgallery" (click)="addImage()">add_to_photos</i>
+                    Pridať obrázok
                 </div>
             </div>
         </div>
