--- a/gallery/src/assets/main.css
+++ b/gallery/src/assets/main.css
@@ -175,6 +175,24 @@ span.imagesCount {
     padding: 20px;
 }
 
+div#overlay {
+    display: none;
+    position: fixed;
+    width: 100vw;
+    overflow: hidden;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    text-align: center;
+    padding-top: 50px;
+    background: #00000040;
+    z-index: 9999;
+}
+
+.drag-and-drop {
+    height: 100%;
+    width: 100%;
+}
 
 
 
