--- a/gallery/src/assets/main.css
+++ b/gallery/src/assets/main.css
@@ -14,7 +14,7 @@ h2,h3,h4{
 }
 .card {
 
-    width: 263px;
+    min-width: 263px;
     margin: 15px;
 }
 
@@ -184,7 +184,7 @@ div#overlay {
     top: 0;
     left: 0;
     text-align: center;
-    padding-top: 50px;
+
     background: #00000040;
     z-index: 9999;
 }
@@ -192,6 +192,14 @@ div#overlay {
 .drag-and-drop {
     height: 100%;
     width: 100%;
+}
+
+#loader {
+    position: fixed;
+    left: 50%;
+    margin-left: -50px;
+    height: 100px;
+    z-index: 999999999999;
 }
 
 
