--- a/gallery/src/app/components/gallery/gallery.component.html
+++ b/gallery/src/app/components/gallery/gallery.component.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card col-md-3 col-lg-3">
                 <div class="card-block add">
                     <i class="material-icons addgallery" (click)="addGallery()">add_to_photos</i>
                     Pridať kategóriu
