--- a/gallery/src/app/components/gallery/gallery.component.html
+++ b/gallery/src/app/components/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
-    <div id="background">
-        <img src="{{background}}" alt="">
+    <div id="background" [ngStyle]="{'background-image': 'url(' + background + ')'}">
+        <!--<img src="{{background}}" alt="">-->
 
     </div>
     <h2>Fotogaléria</h2>
@@ -21,14 +21,43 @@
                 <div class="card-block ">
                     <h4 class="card-title imagesCount"></h4>
                     <h4 class="card-title title">{{item.name}}</h4>
-                    <img class="closeIcon" src="../../../assets/images/close.png" alt="" (click)="removeGallery(item);">
-                    <span class="imagesCount animated zoomIn " [hidden]="!item[showCount]">{{imagesCount}}</span>
+                    <!-- Button trigger remove modal -->
+                    <img data-toggle="modal" data-target="#removeModal" class="closeIcon"
+                         src="../../../assets/images/close.png" alt="">
+
+                    <!-- remove modal -->
+                    <div class="modal fade" id="removeModal" tabindex="-1" role="dialog"
+                         aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Remove gallery</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Táto akcia sa nedá vrátiť spať
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-danger" (click)="removeGallery(item)"
+                                            data-dismiss="modal">Yes
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <span class="imagesCount animated zoomIn" [hidden]="!item[showCount]">{{imagesCount}}</span>
                 </div>
             </div>
 
-            <div class="card col-md-3 col-lg-3">
+            <!-- Add gallery -->
+            <div class="card">
                 <div class="card-block add">
-                    <i class="material-icons addgallery" (click)="addGallery()">add_to_photos</i>
+                    <i class="material-icons addgallery" data-toggle="modal" data-target="#exampleModal"
+                       data-whatever="@getbootstrap">add_to_photos</i>
                     Pridať kategóriu
                 </div>
             </div>
@@ -37,3 +66,35 @@
 
     </div>
 </div>
+
+<!-- Modal for adding gallery -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel2">Add gallery</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="recipient-name" class="col-form-label">Zadajte názov galérie</label>
+                        <input type="text" class="form-control" id="recipient-name">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" (click)="addGallery()" data-dismiss="modal">Pridať
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
