--- a/gallery/src/assets/main.css
+++ b/gallery/src/assets/main.css
@@ -52,16 +52,9 @@ h4.card-title {
     position: relative;
 }
 
-/*.card-block:before {*/
-    /*content: ' ';*/
-    /*position: absolute;*/
-    /*width: 100%;*/
-    /*height: 30px;*/
-    /*z-index: 2;*/
-    /*top: -25px;*/
-    /*left: 0px;*/
-    /*background: white;*/
-/*}*/
+span.imagesCount.ng-trigger.ng-trigger-showCount {
+    transition:opacity 0.4s ease-in;
+}
 
 #background img {
     height: 100%;
