--- a/gallery/src/app/components/images/images.component.html
+++ b/gallery/src/app/components/images/images.component.html
@@ -13,22 +13,58 @@
                  alt="Card image cap" (click)="showLightBox(item.fullpath)">
             <div class="card-body">
                 {{item.name}}
-                <img class="closeIcon" src="../../../assets/images/close.png"
+
+                <img data-toggle="modal" data-target="#removeModal" class="closeIcon"
+                     src="../../../assets/images/close.png"
                      alt="" (click)="removeImage(item.fullpath);">
+
+
             </div>
         </div>
 
         <div class="card">
             <div class="card-block add">
                 <div dnd-droppable class="panel panel-info drag-and-drop"
-                     (onDropSuccess)="transferDataSuccess($event)">
+                     (onDropSuccess)="addImage($event)">
                     <div class="panel-heading">Place to drop</div>
                     <div class="panel-body">
                     </div>
 
                     <i class="material-icons addgallery" (click)="addImage()">add_to_photos</i>
-                    Pridať obrázok
+                    Select file:
+                    <input type="file" (change)="changeListener($event)">
+
+
+
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for adding image/s -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel2">Add gallery</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="recipient-name" class="col-form-label">Zadajte názov galérie</label>
+                        <input type="text" class="form-control" id="recipient-name">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" (click)="addGallery()" data-dismiss="modal">Pridať
+                </button>
             </div>
         </div>
     </div>
